<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <!-- Action Bar -->
    <include layout="@layout/action_bar_layout" />

    <!-- Conteudo -->
    <ScrollView
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- Como funciona -->
            <LinearLayout
                android:paddingRight="16dp"
                android:paddingLeft="16dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="15dp">

                <TextView
                    android:text="@string/como_funciona"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_gravity="center"
                    android:layout_weight="3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />

                <!-- Implementar Ligacao -->
                <ImageButton
                    android:id="@+id/ib_ligar_bombeiros"
                    android:src="@drawable/button_bombeiro"
                    android:scaleType="fitCenter"
                    android:layout_width="70dp"
                    android:layout_height="80dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:gravity="start"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:background="@color/fundo_como_funciona_impar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_marginTop="15dp"
                        android:src="@drawable/como_funciona_um"
                        android:layout_width="50dp"
                        android:layout_height="50dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/como_funciona_um"
                        android:layout_marginTop="10dp" />

                    <ImageView
                        android:layout_gravity="start"
                        android:src="@drawable/como_funciona_app"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="15dp" />

                </LinearLayout>

                <LinearLayout
                    android:gravity="start"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:background="@color/fundo_como_funciona_par"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_marginTop="15dp"
                        android:src="@drawable/como_funciona_dois"
                        android:layout_width="50dp"
                        android:layout_height="50dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/como_funciona_dois"
                        android:layout_marginTop="10dp" />

                    <ImageView
                        android:layout_gravity="start"
                        android:src="@drawable/como_funciona_localizacao"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="15dp" />

                </LinearLayout>

                <LinearLayout
                    android:gravity="start"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:background="@color/fundo_como_funciona_impar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_marginTop="15dp"
                        android:src="@drawable/como_funciona_tres"
                        android:layout_width="50dp"
                        android:layout_height="50dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/como_funciona_tres"
                        android:layout_marginTop="10dp" />

                    <ImageView
                        android:layout_gravity="start"
                        android:src="@drawable/como_funcionamento_mapa"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="15dp" />

                </LinearLayout>

                <LinearLayout
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:background="@color/fundo_como_funciona_par"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_marginTop="15dp"
                        android:src="@drawable/como_funciona_quatro"
                        android:layout_width="50dp"
                        android:layout_height="50dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/como_funciona_quatro"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="15dp" />

                    <ImageView
                        android:layout_gravity="start"
                        android:src="@drawable/como_funciona_atendimento"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="15dp" />

                </LinearLayout>

                <LinearLayout
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:background="@color/fundo_como_funciona_impar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_marginTop="15dp"
                        android:src="@drawable/como_funciona_cinco"
                        android:layout_width="50dp"
                        android:layout_height="50dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/como_funciona_cinco"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="15dp" />

                </LinearLayout>

            </LinearLayout>

            <!-- Sobre -->
            <LinearLayout
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/sobre"
                    android:textColor="@color/color_vermelho_escuro"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="10dp"
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/sobre_descricao" />

            </LinearLayout>

            <!-- Beneficios -->
            <LinearLayout
                android:layout_gravity="center"
                android:gravity="center"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/beneficios"
                    android:textColor="@color/color_vermelho_escuro"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="10dp"
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:textAlignment="center"
                    android:layout_marginTop="7dp"
                    android:layout_marginBottom="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/beneficios_um" />
                <TextView
                    android:textAlignment="center"
                    android:layout_marginTop="7dp"
                    android:layout_marginBottom="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/beneficios_dois" />
                <TextView
                    android:textAlignment="center"
                    android:layout_marginTop="7dp"
                    android:layout_marginBottom="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/beneficios_tres" />
                <TextView
                    android:textAlignment="center"
                    android:layout_marginTop="7dp"
                    android:layout_marginBottom="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/beneficios_quatro" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <!-- Banner -->
    <include layout="@layout/empresa_banner_layout" />

</LinearLayout>